tests/compiler/type_error/ir.disasm
Globals:

Functions:
Function: f
block 0
  var return_value: void = None
  var x: float = None
  -> block 1

block 1
  -> return
Function: foo
block 0
  var return_value: string = None
  var x: void = None
  var temp2: int = Some(Int(3))
  x = temp2
  free(temp2)
  var y: void = None
  var temp4: int = Some(Int(2))
  y = temp4
  free(temp4)
  var z: void = None
  var temp6: void = None
  temp6 = x + y
  z = temp6
  free(temp6)
  var temp7: void = None
  var temp8: void = None
  var temp9: void = None
  temp9 = x
  temp8 = call f(temp9)
  temp7 = temp8
  free(temp9)
  free(temp8)
  free(temp7)
  return_value = z
  free(z)
  free(y)
  free(x)
  free(return_value)
  -> block 2

block 1
  -> return

block 2
  -> block 1

block 3
  -> block 1
